[package]
name = "untitled-studio"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.22.0"
egui = "0.22.0"
egui-phosphor = "0.1.1"
egui_dock = "0.6.3"
rfd = "0.11.4"
rgb = { version = "0.8.36", features = ["serde"] }
serde = "1.0.171"
serde_json = "1.0.100"
